[package]
name = "pusoy_dos"
version = "0.1.1"
authors = ["Ben Brunton <ben.b.brunton@gmail.com>"]
license = "MIT"
description = "Pusoy Dos library"
readme = "README.md"

[badges]
travis-ci = { repository = "benbrunton/pusoy_dos", branch = "master" }

[dependencies]
rand = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
#rustc-serialize = "0.3"
